--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
                     <div class="lesson-item">
                         <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 1" data-en="Quarter 1 - Lesson 1">කාර්තුව 1 - පාඩම 1</span>
                         <div class="lesson-buttons">
-                            <button class="view-btn" onclick="viewPDF('grade1-4', 'Q1-L1')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
-                            <button class="direct-download-btn" onclick="directDownload('grade1-4', 'Q1-L1')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
+                            <button class="view-btn" onclick="viewPDF('grade1-4', 'Creation lesson.pdf')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
+                            <button class="direct-download-btn" onclick="directDownload('grade1-4', 'Creation lesson.pdf')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
                         </div>
                     </div>
                     <div class="lesson-item">
@@ -765,4 +765,5 @@
     </script>
 </body>
 </html>
+
 
