--- a/index.html
+++ b/index.html
@@ -17,23 +17,30 @@
             background-attachment: fixed;
             min-height: 100vh;
             padding: 20px;
-            animation: gradientShift 15s ease infinite;
         }
 
-        @keyframes gradientShift {
-            0%, 100% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
+        /* Disable heavy animations on mobile */
+        @media (max-width: 768px) {
+            body {
+                background-attachment: scroll;
+            }
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            animation: fadeIn 0.8s ease;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+        /* Remove animation on mobile for faster load */
+        @media (min-width: 769px) {
+            .container {
+                animation: fadeIn 0.8s ease;
+            }
+            
+            @keyframes fadeIn {
+                from { opacity: 0; transform: translateY(20px); }
+                to { opacity: 1; transform: translateY(0); }
+            }
         }
 
         header {
@@ -133,6 +140,13 @@
             transition: left 0.5s;
         }
 
+        /* Disable shimmer effect on mobile */
+        @media (max-width: 768px) {
+            .card::before {
+                display: none;
+            }
+        }
+
         .card:hover::before {
             left: 100%;
         }
@@ -164,12 +178,18 @@
         .lesson-list {
             display: none;
             margin-top: 20px;
-            animation: slideDown 0.3s ease;
         }
 
-        @keyframes slideDown {
-            from { opacity: 0; transform: translateY(-10px); }
-            to { opacity: 1; transform: translateY(0); }
+        /* Disable animation on mobile */
+        @media (min-width: 769px) {
+            .lesson-list {
+                animation: slideDown 0.3s ease;
+            }
+            
+            @keyframes slideDown {
+                from { opacity: 0; transform: translateY(-10px); }
+                to { opacity: 1; transform: translateY(0); }
+            }
         }
 
         .lesson-list.active {
@@ -497,6 +517,8 @@
 
             .card {
                 padding: 25px;
+                /* Simplify shadows on mobile */
+                box-shadow: 0 8px 20px rgba(0,0,0,0.15);
             }
 
             .modal-content {
@@ -512,11 +534,32 @@
 
             header {
                 padding: 25px 15px;
+                /* Reduce blur on mobile for better performance */
+                backdrop-filter: blur(10px);
             }
 
             .grade-cards {
                 grid-template-columns: 1fr;
                 gap: 20px;
+            }
+
+            /* Simplify effects on mobile */
+            .card:hover {
+                transform: none;
+                box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+            }
+
+            .view-btn:hover,
+            .direct-download-btn:hover,
+            .toggle-btn:hover,
+            .close-btn:hover,
+            .download-btn:hover {
+                transform: none;
+            }
+
+            /* Reduce backdrop blur for better mobile performance */
+            .modal {
+                backdrop-filter: blur(4px);
             }
         }
 
