--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>සබත් පාසල් ගුරු සම්පත්</title>
+    <title>සබත් පාසල් විශය නිර්දේශය</title>
     
     <!-- Preload critical font for faster text rendering -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -663,32 +663,32 @@
                 <button class="lang-btn active" onclick="switchLanguage('si')">සිංහල</button>
                 <button class="lang-btn" onclick="switchLanguage('en')">English</button>
             </div>
-            <h1 data-si="📖 සබත් පාසල් ගුරු සම්පත්" data-en="📖 Sabbath School Teacher Resources">📖 සබත් පාසල් ගුරු සම්පත්</h1>
-            <p data-si="සියලුම ශ්‍රේණි සඳහා ඩිජිටල් පාඩම් ද්‍රව්‍ය" data-en="Digital Lesson Materials for All Grades">සියලුම ශ්‍රේණි සඳහා ඩිජිටල් පාඩම් ද්‍රව්‍ය</p>
+            <h1 data-si="📖 සබත් පාසල් ගුරු සම්පත්" data-en="📖 Sabbath School Teacher Resources">📖 සබත් පාසල් විශය නිර්දේශය</h1>
+            <p data-si="සියලුම ශ්‍රේණි සඳහා ඩිජිටල් පාඩම් ද්‍රව්‍ය" data-en="Digital Lesson Materials for All Grades">සියලුම ශ්‍රේණි සඳහා අදාල විශය නිර්දේශය</p>
         </header>
 
         <div class="grade-cards">
             <div class="card">
                 <h2 data-si="ශ්‍රේණි 1-4" data-en="Grade 1-4">ශ්‍රේණි 1-4</h2>
-                <p data-si="ප්‍රාථමික සිසුන් සඳහා පාඩම් ද්‍රව්‍ය" data-en="Lesson materials for elementary students">ප්‍රාථමික සිසුන් සඳහා පාඩම් ද්‍රව්‍ය</p>
-                <button class="toggle-btn" onclick="toggleLessons('grade1-4')" data-si="පාඩම් බලන්න" data-en="View Lessons">පාඩම් බලන්න</button>
+                <p data-si="ප්‍රාථමික සිසුන් සඳහා පාඩම් ද්‍රව්‍ය" data-en="Lesson materials for elementary students">ප්‍රාථමික සිසුන් සඳහා විශය නිර්දේශය</p>
+                <button class="toggle-btn" onclick="toggleLessons('grade1-4')" data-si="පාඩම් බලන්න" data-en="View Lessons">පාඩම බලන්න</button>
                 <div id="grade1-4" class="lesson-list">
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 1" data-en="Quarter 1 - Lesson 1">කාර්තුව 1 - පාඩම 1</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 1" data-en="Quarter 1 - Lesson 1">පාඩම 1</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade1-4', 'Q1-L1')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade1-4', 'Q1-L1')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
                         </div>
                     </div>
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 2" data-en="Quarter 1 - Lesson 2">කාර්තුව 1 - පාඩම 2</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 2" data-en="Quarter 1 - Lesson 2">පාඩම 2</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade1-4', 'Q1-L2')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade1-4', 'Q1-L2')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
                         </div>
                     </div>
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 3" data-en="Quarter 1 - Lesson 3">කාර්තුව 1 - පාඩම 3</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 3" data-en="Quarter 1 - Lesson 3">පාඩම 3</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade1-4', 'Q1-L3')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade1-4', 'Q1-L3')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
@@ -699,25 +699,25 @@
 
             <div class="card">
                 <h2 data-si="ශ්‍රේණි 5-7" data-en="Grade 5-7">ශ්‍රේණි 5-7</h2>
-                <p data-si="මධ්‍ය ශ්‍රේණි සිසුන් සඳහා පාඩම් ද්‍රව්‍ය" data-en="Lesson materials for middle grade students">මධ්‍ය ශ්‍රේණි සිසුන් සඳහා පාඩම් ද්‍රව්‍ය</p>
+                <p data-si="මධ්‍ය ශ්‍රේණි සිසුන් සඳහා පාඩම් ද්‍රව්‍ය" data-en="Lesson materials for middle grade students">මධ්‍ය ශ්‍රේණි සිසුන් සඳහා විශය නිර්දේශය</p>
                 <button class="toggle-btn" onclick="toggleLessons('grade5-7')" data-si="පාඩම් බලන්න" data-en="View Lessons">පාඩම් බලන්න</button>
                 <div id="grade5-7" class="lesson-list">
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 1" data-en="Quarter 1 - Lesson 1">කාර්තුව 1 - පාඩම 1</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 1" data-en="Quarter 1 - Lesson 1">පාඩම 1</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade5-7', 'Q1-L1')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade5-7', 'Q1-L1')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
                         </div>
                     </div>
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 2" data-en="Quarter 1 - Lesson 2">කාර්තුව 1 - පාඩම 2</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 2" data-en="Quarter 1 - Lesson 2">පාඩම 2</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade5-7', 'Q1-L2')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade5-7', 'Q1-L2')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
                         </div>
                     </div>
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 3" data-en="Quarter 1 - Lesson 3">කාර්තුව 1 - පාඩම 3</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 3" data-en="Quarter 1 - Lesson 3">පාඩම 3</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade5-7', 'Q1-L3')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade5-7', 'Q1-L3')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
@@ -728,25 +728,25 @@
 
             <div class="card">
                 <h2 data-si="ශ්‍රේණි 8-9" data-en="Grade 8-9">ශ්‍රේණි 8-9</h2>
-                <p data-si="කනිෂ්ඨ උසස් සිසුන් සඳහා පාඩම් ද්‍රව්‍ය" data-en="Lesson materials for junior high students">කනිෂ්ඨ උසස් සිසුන් සඳහා පාඩම් ද්‍රව්‍ය</p>
+                <p data-si="කනිෂ්ඨ උසස් සිසුන් සඳහා පාඩම් ද්‍රව්‍ය" data-en="Lesson materials for junior high students">කනිෂ්ඨ උසස් සිසුන් සඳහා විශය නිර්දේශය</p>
                 <button class="toggle-btn" onclick="toggleLessons('grade8-9')" data-si="පාඩම් බලන්න" data-en="View Lessons">පාඩම් බලන්න</button>
                 <div id="grade8-9" class="lesson-list">
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 1" data-en="Quarter 1 - Lesson 1">කාර්තුව 1 - පාඩම 1</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 1" data-en="Quarter 1 - Lesson 1">පාඩම 1</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade8-9', 'Q1-L1')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade8-9', 'Q1-L1')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
                         </div>
                     </div>
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 2" data-en="Quarter 1 - Lesson 2">කාර්තුව 1 - පාඩම 2</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 2" data-en="Quarter 1 - Lesson 2">පාඩම 2</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade8-9', 'Q1-L2')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade8-9', 'Q1-L2')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
                         </div>
                     </div>
                     <div class="lesson-item">
-                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 3" data-en="Quarter 1 - Lesson 3">කාර්තුව 1 - පාඩම 3</span>
+                        <span class="lesson-title" data-si="කාර්තුව 1 - පාඩම 3" data-en="Quarter 1 - Lesson 3">පාඩම 3</span>
                         <div class="lesson-buttons">
                             <button class="view-btn" onclick="viewPDF('grade8-9', 'Q1-L3')" data-si="PDF බලන්න" data-en="View PDF">PDF බලන්න</button>
                             <button class="direct-download-btn" onclick="directDownload('grade8-9', 'Q1-L3')" data-si="බාගන්න" data-en="Download">බාගන්න</button>
@@ -759,7 +759,7 @@
     <div id="pdfModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 id="modalTitle" data-si="පාඩම් නරඹන්නා" data-en="Lesson Viewer">පාඩම් නරඹන්නා</h3>
+                <h3 id="modalTitle" data-si="පාඩම් නරඹන්නා" data-en="Lesson Viewer">පාඩම් නරඹන්න</h3>
                 <div>
                     <button class="download-btn" id="downloadBtn" onclick="downloadPDF()" data-si="බාගත කරන්න" data-en="Download">බාගත කරන්න</button>
                     <button class="close-btn" onclick="closeModal()" data-si="වසන්න" data-en="Close">වසන්න</button>
@@ -910,3 +910,4 @@
     </script>
 </body>
 </html>
+
